# StructureFinder

./: .gitignore  .licenserc.yaml  CMakeLists.txt  README.md
.github/: .licenserc.yaml
.github/workflows/: merge.yaml  pull_request.yaml
cmake/: get_cmaize.cmake
codes/modules/lennard_jones_potential_module/: LJ_potential.py  lennard_jones_potential_module.py
docs/: Makefile  README.md  requirements.txt
docs/source/: conf.py  index.rst  nitpick_exceptions
docs/source/module_api/: index.rst
include/structurefinder/: structurefinder.hpp  structurefinder_mm.hpp
src/python/structurefinder/: PyBernyOpt.py  __init__.py  chemist_tools.py  chemisttools.py  optimizer_modules.py  pybernyopt.py
src/python/structurefinder/.spyproject/config/: codestyle.ini  encoding.ini  vcs.ini  workspace.ini
src/python/structurefinder/.spyproject/config/defaults/: defaults-codestyle-0.2.0.ini  defaults-encoding-0.2.0.ini  defaults-vcs-0.2.0.ini  defaults-workspace-0.2.0.ini
src/python/structurefinder/FIRE_BE/: __init__.py  be2_FIRE.py
src/python/structurefinder/FIRE_NSTOVSUT/: nesterov_FIRE.py  nesterov_SUT_DC_NVT.py
src/python/structurefinder/fire/: __init__.py
src/python/structurefinder/fire/backward_euler/: __init__.py  backward_euler.py  be2_DC_NVT.py  be2_DC_VarT.py
src/python/structurefinder/fire/nesterov_sutskever/: nesterov_SUT_DC_NVT.py  nesterov_SUT_DC_VarT.py  nesterov_SUT_NDC.py  nesterov_sutskever.py
src/python/structurefinder/fire/velocity_verlet/: velocity_verlet.py  vv_DC_NVT.py  vv_DC_VarT.py
src/python/structurefinder/lj_potential/: LJ_MD_plot.py  LJ_potential.py  __init__.py  lennard_jones_potential_module.py  lj_potential.py
src/python/structurefinder/pyberny/: __init__.py
src/structurefinder/: PyBernyOpt.py  __init__.py  structurefinder_mm.cpp  structurefinder_mm.py
tests/python/unit_tests/: test_chemist_tools.py  test_chemisttools.py  test_optimizer_modules.py  test_structurefinder.py
tests/python/unit_tests/test_lennard_jones_potential/: test_LJ_potential.py  test_lennard_jones_potential.py
tests/python/unit_tests/test_optimizers/: test_backward_euler_fire.py  test_pybernyop.py
tests/unit_tests/: test_load_modules.cpp
